packages/codex-docs/docs/.vitepress/theme/custom.css
/* Codex design tokens and rules for VitePress docs. */
@import '@wikimedia/codex-design-tokens/theme-wikimedia-ui.css';

/* stylelint-disable selector-class-pattern */

:root {
	/* syntax highlighting fixes */
	--vp-code-block-color: rgba( 255, 255, 245, 0.86 );
	--vp-code-block-bg: #292b30;
	--vp-code-block-divider-color: #000;
	--vp-code-lang-color: rgba( 235, 235, 245, 0.38 );
	--vp-code-tab-text-color: rgba( 235, 235, 245, 0.6 );
	--vp-code-tab-hover-text-color: rgba( 255, 255, 245, 0.86 );
	--vp-code-tab-active-text-color: rgba( 255, 255, 245, 0.86 );

	/* Override base VitePress theme variables with Codex design tokens. */
	--vp-c-brand: var( --color-progressive );
	--vp-c-brand-light: var( --color-progressive--hover );

	--vp-c-text: var( --color-base );
	--vp-c-text-1: var( --color-base );
	--vp-c-text-2: var( --color-subtle );
	--vp-c-text-code: var( --color-emphasized );

	--vp-c-white-soft: var( --background-color-interactive-subtle );
	--vp-c-white-mute: var( --background-color-interactive-subtle );

	--vp-c-indigo: var( --color-progressive );
	--vp-c-indigo-soft: var( --color-progressive--active );

	--vp-c-bg-alt: var( --background-color-interactive-subtle );

	--vp-c-divider: var( --border-color-base );
	--vp-c-divider-light: var( --border-color-subtle );

	--vp-font-family-base: var( --font-family-system-sans );
	--vp-font-family-serif: var( --font-family-serif );

	/* Z-indexes */
	/* Header is sticky. */
	--vp-z-index-nav: var( --z-index-sticky );

	--vp-custom-block-info-border: var( --border-color-notice );
	--vp-custom-block-info-text: var( --color-notice );
	--vp-custom-block-info-bg: var( --background-color-notice-subtle );

	--vp-custom-block-tip-border: var( --border-color-progressive );
	--vp-custom-block-tip-text: var( --color-notice );
	--vp-custom-block-tip-bg: var( --background-color-interactive-subtle );

	--vp-custom-block-warning-border: var( --border-color-warning );
	--vp-custom-block-warning-text: var( --color-notice );
	--vp-custom-block-warning-bg: var( --background-color-warning-subtle );

	--vp-custom-block-danger-border: var( --border-color-error );
	--vp-custom-block-danger-text: var( --color-notice );
	--vp-custom-block-danger-bg: var( --background-color-error-subtle );

	--vp-custom-block-details-border: var( --border-color-notice );
	--vp-custom-block-details-text: var( --color-notice );
	--vp-custom-block-details-bg: var( --background-color-notice-subtle );
}

/* VitePress theme overrides and unsets. */
/* HTML elements. ---------------------------------------------------------- */

html,
body {
	/* Use `initial` to overwrite VitePress' absolute font sizing.
	 * We can't use `unset` due to cross-browser compatibility right now.
	 * See T303100.
	 */
	font-size: initial;
	/* Set `line-height` to medium `1.6` in default theme. This also fulfills the
	 * WCAG 2.2 AA requirement for line height of at least 1.5.
	 */
	line-height: var( --line-height-medium );
}

.vp-doc h1,
.vp-doc h2,
.vp-doc h3,
.vp-doc h4,
.vp-doc h5,
.vp-doc h6 {
	color: var( --color-emphasized );
	/* Use `initial` to reset VitePress' opinionated `letter-spacing` to browser default.
	 * In future, replace by `.vp-doc :is( h1, … )`.
	 */
	letter-spacing: initial;
}

.vp-doc h2,
.vp-doc h3,
.vp-doc h4,
.vp-doc h5,
.vp-doc h6 {
	font-weight: var( --font-weight-bold );
}

.vp-doc h1 {
	font-family: var( --font-family-heading-main );
	font-size: var( --font-size-xxx-large );
	font-weight: var( --font-weight-normal );
	line-height: var( --line-height-xxx-small );
}

.vp-doc h2 {
	padding-top: var( --spacing-300 );
	font-size: var( --font-size-xx-large );
	line-height: var( --line-height-xxx-small );
}

.vp-doc h3 {
	font-size: var( --font-size-x-large );
	line-height: var( --line-height-xxx-small );
}

.vp-doc h4 {
	margin-top: var( --spacing-150 );
	font-size: var( --font-size-large );
	line-height: var( --line-height-xxx-small );
}

.vp-doc h5 {
	margin-top: var( --spacing-125 );
	font-size: var( --font-size-medium );
	line-height: var( --line-height-xxx-small );
}

.vp-doc h6 {
	font-size: var( --font-size-medium );
	line-height: var( --line-height-medium );
}

.vp-doc a {
	/* Use `initial` to reset VitePress' opinionated font weight to browser default. */
	font-weight: initial;
	text-decoration: var( --text-decoration-none );
	transition-duration: 0s;
}

.vp-doc a:hover {
	color: var( --color-progressive );
	text-decoration: var( --text-decoration-underline );
}

.vp-doc p,
.vp-doc li {
	clear: both;
	line-height: var( --line-height-medium );
}

.vp-doc img,
.vp-doc video,
.vp-doc h1 + p {
	margin-top: var( --spacing-125 );
}

.vp-doc h4 + p {
	margin-top: var( --spacing-75 );
}

.vp-doc table {
	display: table;
}

.vp-doc th,
.vp-doc td {
	border-color: var( --border-color-subtle );
	padding: var( --spacing-50 ) var( --spacing-75 );
	/* Use relative size in general. */
	font-size: var( --font-size-small );
}

.vp-doc td pre {
	margin: 0;
}

.vp-doc figcaption {
	font-size: var( --font-size-small );
	/* There is no token for this. */
	/* stylelint-disable-next-line scale-unlimited/declaration-strict-value */
	font-style: italic;
}

/* Navigation. ------------------------------------------------------------- */

.Layout .VPSidebar {
	background-color: var( --background-color-base );
	border-right: var( --border-width-base ) var( --border-style-base ) var( --border-color-subtle );
}

/* When the sidebar is not collapsed... */
@media screen and ( min-width: 960px ) {
	/* Get rid of blurred background of fixed header. */
	.VPSidebar .curtain {
		background-color: var( --background-color-base );
	}
}

.VPNavBarTitle .title {
	font-size: var( --font-size-x-large );
}

.VPNavBarTitle .title:hover {
	color: var( --color-base--hover );
	opacity: var( --opacity-base );
}

/* Main nav dropdown menu. */
.VPFlyout .VPMenu {
	border-color: var( --border-color-base );
	border-radius: var( --border-radius-base );
	padding: 0;
	box-shadow: var( --box-shadow-drop-medium );
}
/* ... */

